// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionHeader correctly applies the theme context className 1`] = `
<div
  className="flex-header orion-fusion-theme customClassName"
>
  <div
    className="flex-end"
  >
    <div
      className="left-buttons orion-fusion-theme"
    >
      <Button
        className="header-button maximize-button"
        data-terra-action-header="maximize-button"
        icon={
          <span
            className="header-icon maximize"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.maximize"
        type="button"
        variant="utility"
      />
    </div>
  </div>
  <div
    className="flex-fill"
  >
    <div
      className="title-container"
    >
      <h1
        className="title"
      >
        Action Header
      </h1>
    </div>
  </div>
  <div
    className="flex-end"
  >
    <div
      className="right-buttons orion-fusion-theme"
    >
      <Button
        className="header-button close-button"
        data-terra-action-header="close-button"
        icon={
          <span
            className="header-icon close"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.close"
        type="button"
        variant="utility"
      />
    </div>
  </div>
</div>
`;

exports[`ActionHeader should render a default action header 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={null}
/>
`;

exports[`ActionHeader should render an action header with back and close buttons and title 1`] = `
<ActionHeaderContainer
  endContent={
    <div
      className="right-buttons"
    >
      <Button
        className="header-button close-button"
        data-terra-action-header="close-button"
        icon={
          <span
            className="header-icon close"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.close"
        type="button"
        variant="utility"
      />
    </div>
  }
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <Button
        className="header-button back-button"
        data-terra-action-header="back-button"
        icon={
          <span
            className="header-icon back"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.back"
        type="button"
        variant="utility"
      />
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with back button and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <Button
        className="header-button back-button"
        data-terra-action-header="back-button"
        icon={
          <span
            className="header-icon back"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.back"
        type="button"
        variant="utility"
      />
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with close button and title 1`] = `
<ActionHeaderContainer
  endContent={
    <div
      className="right-buttons"
    >
      <Button
        className="header-button close-button"
        data-terra-action-header="close-button"
        icon={
          <span
            className="header-icon close"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.close"
        type="button"
        variant="utility"
      />
    </div>
  }
  level={1}
  startContent={null}
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with custom button and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={null}
  title="Action Header"
>
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isReversed={false}
    onClick={[Function]}
    text="Custom Button"
    type="button"
    variant="neutral"
  />
</ActionHeaderContainer>
`;

exports[`ActionHeader should render an action header with level three header element and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={3}
  startContent={null}
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with maximize button and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <Button
        className="header-button maximize-button"
        data-terra-action-header="maximize-button"
        icon={
          <span
            className="header-icon maximize"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.maximize"
        type="button"
        variant="utility"
      />
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with minimize button and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <Button
        className="header-button minimize-button"
        data-terra-action-header="minimize-button"
        icon={
          <span
            className="header-icon minimize"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.minimize"
        type="button"
        variant="utility"
      />
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with multiple custom buttons and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={null}
  title="Action Header"
>
  <span>
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Custom Button"
      type="button"
      variant="neutral"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Custom Button"
      type="button"
      variant="neutral"
    />
  </span>
</ActionHeaderContainer>
`;

exports[`ActionHeader should render an action header with next and previous buttons and title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <div
        className="previous-next-button-group"
      >
        <Button
          className="header-button previous-button"
          data-terra-action-header="previous-button"
          icon={
            <span
              className="header-icon previous"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Terra.actionHeader.previous"
          type="button"
          variant="utility"
        />
        <Button
          className="header-button next-button"
          data-terra-action-header="next-button"
          icon={
            <span
              className="header-icon next"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Terra.actionHeader.next"
          type="button"
          variant="utility"
        />
      </div>
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with title 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={null}
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with title, enabled next button, and disabled previous button 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <div
        className="previous-next-button-group"
      >
        <Button
          className="header-button previous-button"
          data-terra-action-header="previous-button"
          icon={
            <span
              className="header-icon previous"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={true}
          isIconOnly={true}
          isReversed={false}
          text="Terra.actionHeader.previous"
          type="button"
          variant="utility"
        />
        <Button
          className="header-button next-button"
          data-terra-action-header="next-button"
          icon={
            <span
              className="header-icon next"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Terra.actionHeader.next"
          type="button"
          variant="utility"
        />
      </div>
    </div>
  }
  title="Action Header"
/>
`;

exports[`ActionHeader should render an action header with title, enabled previous button, and disabled next button 1`] = `
<ActionHeaderContainer
  endContent={null}
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <div
        className="previous-next-button-group"
      >
        <Button
          className="header-button previous-button"
          data-terra-action-header="previous-button"
          icon={
            <span
              className="header-icon previous"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Terra.actionHeader.previous"
          type="button"
          variant="utility"
        />
        <Button
          className="header-button next-button"
          data-terra-action-header="next-button"
          icon={
            <span
              className="header-icon next"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={true}
          isIconOnly={true}
          isReversed={false}
          text="Terra.actionHeader.next"
          type="button"
          variant="utility"
        />
      </div>
    </div>
  }
  title="Action Header"
/>
`;
